2005-10-12  Julien MOUTTE  <julien@moutte.net>

	* ext/pitfdll/dmo_adec.c: (dmo_audiodec_sink_event):
	* ext/pitfdll/dmo_vdec.c: (dmo_videodec_sink_event):
	* ext/pitfdll/dshow_vdec.c: (dshow_videodec_sink_event):
	* ext/pitfdll/qt_adec.c: (qt_audiodec_sink_event): Fix for newsegment
	API changes.

2005-10-07  Julien MOUTTE  <julien@moutte.net>

	* ext/pitfdll/dmo_venc.c: (dmo_videoenc_sink_setcaps),
	(dmo_videoenc_chain): Don't push empty buffers.
	* gst-libs/ext/loader/dmo/DMO_VideoEncoder.c:
	(DMO_VideoEncoder_Open), (DMO_VideoEncoder_ProcessOutput):
	* gst-libs/ext/loader/dmo/DMO_VideoEncoder.h: Handle key frames.

2005-10-05  Julien MOUTTE  <julien@moutte.net>

	* ext/pitfdll/dmo_aenc.c: (dmo_audioenc_init),
	(dmo_audioenc_chain), (dmo_audioenc_change_state),
	(dmo_audioenc_sink_event):
	* ext/pitfdll/dmo_venc.c: (dmo_videoenc_init),
	(dmo_videoenc_sink_setcaps), (dmo_videoenc_chain),
	(dmo_videoenc_change_state), (dmo_videoenc_sink_event): Handle
	newsegment correctly.

2005-10-02  Julien MOUTTE  <julien@moutte.net>

	* configure.ac:
	* ext/pitfdll/Makefile.am:
	* ext/pitfdll/dmo_adec.c: (dmo_audiodec_init),
	(dmo_audiodec_sink_setcaps), (dmo_audiodec_chain),
	(dmo_audiodec_change_state), (dmo_audiodec_sink_event):
	* ext/pitfdll/dmo_aenc.c: (dmo_audioenc_init),
	(dmo_audioenc_sink_setcaps), (dmo_audioenc_chain),
	(dmo_audioenc_change_state), (dmo_audioenc_sink_event):
	* ext/pitfdll/dmo_vdec.c: (dmo_videodec_init),
	(dmo_videodec_sink_setcaps), (dmo_videodec_chain),
	(dmo_videodec_change_state), (dmo_videodec_sink_event):
	* ext/pitfdll/dmo_venc.c: (dmo_videoenc_init),
	(dmo_videoenc_sink_setcaps), (dmo_videoenc_chain),
	(dmo_videoenc_change_state), (dmo_videoenc_sink_event):
	* ext/pitfdll/dshow_vdec.c: (dshow_videodec_init),
	(dshow_videodec_sink_setcaps), (dshow_videodec_chain),
	(dshow_videodec_change_state), (dshow_videodec_sink_event):
	* ext/pitfdll/pitfdll.c: (plugin_init):
	* ext/pitfdll/qt_adec.c: (qt_audiodec_init),