@@ -22,11 +22,11 @@ enum _DMO_INPUT_DATA_BUFFER_FLAGS
 };
 
 enum _DMO_OUTPUT_DATA_BUFFER_FLAGS
-{
-    DMO_OUTPUT_DATA_BUFFERF_SYNCPOINT	= 0x1,
-    DMO_OUTPUT_DATA_BUFFERF_TIME	= 0x2,
-    DMO_OUTPUT_DATA_BUFFERF_TIMELENGTH	= 0x4,
-    DMO_OUTPUT_DATA_BUFFERF_INCOMPLETE	= 0x1000000
+{ 
+    DMO_OUTPUT_DATA_BUFFERF_SYNCPOINT       = 0x00000001,
+    DMO_OUTPUT_DATA_BUFFERF_TIME            = 0x00000002,
+    DMO_OUTPUT_DATA_BUFFERF_TIMELENGTH      = 0x00000004,
+    DMO_OUTPUT_DATA_BUFFERF_INCOMPLETE      = 0x01000000
 };
 
 enum _DMO_INPUT_STATUS_FLAGS
